ボタンアイコンのメソッド追加、設定ボタン実装実装

--- a/LPRepo/LPRepo.csproj
+++ b/LPRepo/LPRepo.csproj
@@ -119,7 +119,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="resources\" />
+    <EmbeddedResource Include="resources\icon-settings.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
