--- a/LPRepo/LPRepo.csproj
+++ b/LPRepo/LPRepo.csproj
@@ -81,6 +81,9 @@
     <Compile Include="Background.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="BaseTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DateUtil.cs" />
     <Compile Include="Delegates.cs">
       <SubType>Form</SubType>
@@ -133,6 +136,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="resources\icon-settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="resources\icon-debug.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
