カテゴリ別検査詳細リスト出力機能をメイン機能に昇格、ボタン追加、UI調整

--- a/LPRepo/LPRepo.csproj
+++ b/LPRepo/LPRepo.csproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LPRIcon.ico" />
+    <EmbeddedResource Include="resources\ico-list.png" />
     <EmbeddedResource Include="resources\ico-tsv.png" />
     <EmbeddedResource Include="resources\ico-excel.png" />
     <EmbeddedResource Include="resources\ico-tsv-load.png" />
